final changes for homework assignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,17 @@
+
+/* Resets the box size of every element */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/* body */
 body {
     background-color: #d9dcd6;
 }
 
+/* header */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -20,10 +24,12 @@ body {
     font-size: 48px;
 }
 
+/* company name in header | changed the seo to white */
 .header h1 .seo {
     color: #ffffff;
 }
 
+/* header links */
 .header div {
     padding-top: 15px;
     margin-right: 20px;
@@ -50,6 +56,7 @@ p {
     font-size: 16px;
 }
 
+/* background first image on page */
 .hero {
     height: 800px;
     width: 100%;
@@ -58,6 +65,7 @@ p {
     background-size: cover;
     background-position: center;
 }
+
 
 .float-left {
     float: left;
@@ -69,12 +77,15 @@ p {
     margin-left: 25px;
 }
 
+
+/* content section */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
+/* sidebar main - right hand side */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -86,32 +97,13 @@ p {
     background-color: #2589bd;
 }
 
+/* sidebar 1 - right hand side */
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
 .benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -122,10 +114,32 @@ p {
     max-width: 150px;
 }
 
+/* sidebar 2 - right hand side */
+.benefit-brand {
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+
+.benefit-brand h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
 .benefit-brand img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
+}
+
+/* sidebar 3 - right hand side */
+.benefit-cost {
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+
+.benefit-cost h3 {
+    margin-bottom: 10px;
+    text-align: center;
 }
 
 .benefit-cost img {
@@ -134,25 +148,8 @@ p {
     max-width: 150px;
 }
 
+/* Image and content - 1 */
 .search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -163,14 +160,7 @@ p {
 
 .search-engine-optimization img {
     max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
+    float: left
 }
 
 .search-engine-optimization h2 {
@@ -178,9 +168,47 @@ p {
     font-size: 36px;
 }
 
+/* Image and content - 2 */
+.online-reputation-management {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.float-left {
+    float: left;
+    margin-right: 25px;
+}
+
+.online-reputation-management img {
+    max-height: 200px;
+}
+
 .online-reputation-management h2 {
     margin-bottom: 20px;
     font-size: 36px;
+}
+
+/* Image and content - 3 */
+.social-media-marketing {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.float-right {
+    float: right;
+    margin-left: 25px;
+}
+
+.social-media-marketing img {
+    max-height: 200px;
 }
 
 .social-media-marketing h2 {
@@ -188,6 +216,7 @@ p {
     font-size: 36px;
 }
 
+/*footer*/
 .footer {
     padding: 30px;
     clear: both;
